<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_colour" />

    <EditText
        android:id="@+id/editTextIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_position_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddItem"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/add_new_colour" />

        <Button
            android:id="@+id/buttonRemoveItem"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/remove_a_colour" />

        <Button
            android:id="@+id/buttonUpdateItem"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/update_a_colour" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewColour"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>